# telegram_posts_parser

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements.txt
airflow/: docker-compose.yaml
airflow/dags/: push_to_storage.py  run_scripts.py
data/: vacanciests.json
scripts/: check_files_in_storage.py  parse_posts.py  posts_preprocessing.py  push_to_storage.py
telegram_posts_parser/: create_bucket.py  posts_parsing.py  push_to_storage.py  telegram_channels.py
