[tool.poetry]
name = "telegram-posts-parser"
version = "0.1.0"
description = ""
authors = ["ivan golt <102701882+ivangolt@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "telegram_posts_parser"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.prod.dependencies]
snscrape = "^0.7.0.20230622"
pandas = "^2.2.2"
minio = "^7.2.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
