[tool.poetry]
name = "telegram-posts-parser"
version = "0.1.0"
description = ""
authors = ["ivan golt <102701882+ivangolt@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "telegram_posts_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
public = "^2020.12.3"


[tool.poetry.group.prod.dependencies]
snscrape = "^0.7.0.20230622"
pandas = "^2.2.2"
dvc = "^3.50.2"
boto3 = "^1.34.108"
python-dotenv = "^1.0.1"
scikit-learn = "^1.4.2"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
